--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.5.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
