--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_ROUTES_CITIES=https://fe-diplom.herokuapp.com/routes/cities
 REACT_APP_API_ROUTES=https://netology-trainbooking.herokuapp.com/routes
+REACT_APP_API_URL=https://fe-diplom.herokuapp.com/
