--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rxjs": "^7.5.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://rebikhub.github.io/fe-trainbooking/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
