--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -15,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux-observable": "^2.0.0",
     "rxjs": "^7.5.5",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://rebikhub.github.io/fe-trainbooking/",
