--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://fe-diplom.herokuapp.com/
+REACT_APP_API_URL=https://netology-trainbooking.netoservices.ru/
+#REACT_APP_API_URL=https://fe-diplom.herokuapp.com/
