--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.0"
   }
 }
