--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://rebikhub.github.io/fe-trainbooking/",
+  "homepage": "https://rebikhub.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
